[project]
name = "chatango-lib"
version = "1.7.0"
description = "Chatango bot library using asyncio"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = [
    { name = "LmaoLover", email = "hello@lmao.love" },
    { name = "neokuze", email = "imneokuze@gmail.com" },
    { name = "TheClonerx", email = "theclonerx@outlook.com" },
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.13.5",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = "chatango"
